// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`choices snapshots disabled 1`] = `
<div>
  <div
    style={
      Object {
        "textAlign": "center",
      }
    }
  />
</div>
`;

exports[`choices snapshots empty 1`] = `
<div>
  <div
    style={
      Object {
        "textAlign": "center",
      }
    }
  >
    <DragSource(Choice)
      extraStyle={
        Object {
          "maxWidth": "95%",
        }
      }
      id="1"
      key="0"
      label="foo"
    />
  </div>
</div>
`;

exports[`choices snapshots empty 2`] = `
<div>
  <div
    style={
      Object {
        "textAlign": "center",
      }
    }
  >
    <Blank
      key="0"
    />
  </div>
</div>
`;

exports[`choices snapshots renders 1`] = `
<div>
  <div
    style={
      Object {
        "textAlign": "center",
      }
    }
  />
</div>
`;
